--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: 0;
+  font-family: 'Comic Neue', cursive;
 }
